force-app/main/default/objects/Alert__c/Alert__c.object-meta.xml
<CustomObject>
    <label>Sentinel Alert</label>
    <pluralLabel>Sentinel Alerts</pluralLabel>
    <nameField>
        <displayFormat>ALERT-{0000}</displayFormat>
        <label>Alert Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>