force-app/main/default/objects/Alert__c/fields/AcknowledgedAt__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedAt__c</fullName>
    <label>Acknowledged At</label>
    <type>DateTime</type>
</CustomField>