force-app/main/default/objects/Alert__c/fields/AcknowledgedBy__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedBy__c</fullName>
    <label>Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AcknowledgedAlerts</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>