force-app/main/default/objects/Alert__c/fields/AlertType__c.field-meta.xml
<CustomField>
    <fullName>AlertType__c</fullName>
    <label>Alert Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PERMISSION_DRIFT</fullName>
                <label>Permission Drift</label>
            </value>
            <value>
                <fullName>SHARING_DRIFT</fullName>
                <label>Sharing Drift</label>
            </value>
            <value>
                <fullName>FLOW_DRIFT</fullName>
                <label>Flow Drift</label>
            </value>
            <value>
                <fullName>PROFILE_DRIFT</fullName>
                <label>Profile Drift</label>
            </value>
            <value>
                <fullName>EVIDENCE_PACK</fullName>
                <label>Evidence Pack</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>