force-app/main/default/objects/Alert__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>Record ID</label>
    <length>18</length>
    <type>Text</type>
    <description>The Salesforce record ID related to this alert</description>
</CustomField>